// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple text 1`] = `
<button
  className="Button sc-dnqmqq bVhXPH"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button when urgent 1`] = `
<button
  className="Button sc-dnqmqq fRLgjv"
  onClick={[Function]}
>
  Cancel
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button sc-dnqmqq bVhXPH"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Card Simple card example 1`] = `
<div
  className="sc-bdVaJa iYZZDf"
  style={undefined}
>
  <p>
    Hey there!
  </p>
</div>
`;

exports[`Storyshots Divider Simple example 1`] = `
<div
  className="sc-bwzfXH bkvAHx"
  style={undefined}
>
  <strong
    className="sc-htpNat ccgpGb"
  >
    Or
  </strong>
</div>
`;

exports[`Storyshots HeroImage Simple hero image 1`] = `
<div
  className="sc-EHOje jwLGqq"
>
  <div
    className="sc-ifAKCX gMmqOp"
  >
    <div
      className="sc-bxivhb cAaJnm"
    />
    <div
      className="sc-bZQynM eRcMnp"
    >
      flume
    </div>
  </div>
</div>
`;

exports[`Storyshots LoadingIndicator simple example 1`] = `
<div
  className="sc-gzVnrw dGIYfZ"
>
  <div
    className="sc-iwsKbI dPWiyi"
  />
  <div
    className="sc-gZMcBi ebtRmY"
  />
  <div
    className="sc-gqjmRU cTErFR"
  />
  <div
    className="sc-VigVT dFmMlF"
  />
  <div
    className="sc-jTzLTM enuhco"
  />
  <div
    className="sc-fjdhpX jNqnwR"
  />
  <div
    className="sc-jzJRlG fEFjAE"
  />
  <div
    className="sc-cSHVUG Hyerz"
  />
  <div
    className="sc-kAzzGY hOJQGd"
  />
  <div
    className="sc-chPdSV kNRVZc"
  />
  <div
    className="sc-kgoBCf jBYbkL"
  />
  <div
    className="sc-kGXeez klHZt"
  />
</div>
`;

exports[`Storyshots ThumbImage Album cover example 1`] = `
<div
  className="sc-htoDjs hZvwzw"
  height="150px"
  style={undefined}
  width="150px"
/>
`;
